test/fail/type-instantiation-reversed.grace
let B = A.match(object {}).andAlso { type {} }
let A = type {}
